--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^16.8.0  || ^17.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0",
+    "react-hook-form": "^6.15.1",
+    "react-use": "^17.1.0",
+    "yaml": "^1.10.0"
   }
 }
