--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "prestart": "rm -rf .cache dist",
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "test": "echo run tests"
   },
   "devDependencies": {
     "@types/react": "^17.0.1",
