--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "scripts": {
     "prestart": "rm -rf .cache dist",
     "start": "parcel ./src/index.html",
-    "test": "echo run tests"
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "jest": "^26.6.3",
     "parcel-bundler": "^1.12.4",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
