--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "scripts": {
     "prestart": "rm -rf .cache dist",
     "start": "parcel ./src/index.html",
+    "build": "rm -rf dist && parcel build ./src/index.html --no-source-maps --public-url .",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist -m 'Updates [ci skip]'",
     "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "parcel-bundler": "^1.12.4",
     "ts-jest": "^26.5.1",
