--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "react": "^16.8.0  || ^17.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-json-graph": "^2.0.2",
     "react-use": "^17.1.0",
     "yaml": "^1.10.0"
   }
