--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
   "name": "front-playground-template",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/sisisin/front-playground-template.git",
   "author": "sisisin <azsisisin@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prestart": "rm -rf .cache dist",
-    "start": "parcel ./src/index.html",
-    "build": "rm -rf dist && parcel build ./src/index.html --no-source-maps --public-url .",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d dist -m 'Updates [ci skip]'",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
-    "gh-pages": "^3.1.0",
-    "jest": "^26.6.3",
-    "parcel-bundler": "^1.12.4",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.3"
+    "deploy": "gh-pages -d build -m 'Updates [ci skip]'"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
-    "react-json-graph": "^2.0.2",
-    "react-use": "^17.1.0",
-    "yaml": "^1.10.0"
+    "react-scripts": "4.0.2",
+    "react-use": "^17.1.1",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.1.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
