--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "jsx": "react",
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": false,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
-    "target": "es2020",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": true,
-    "moduleResolution": "node"
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
