--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "4.0.2",
     "react-use": "^17.1.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yaml": "^1.10.0"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
