--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-json-graph": "^2.0.2",
     "react-scripts": "4.0.2",
     "react-use": "^17.1.1",
     "typescript": "^4.1.2",
